--- a/SobotKit.bundle/Localizable/id_lproj/SobotLocalizable.strings
+++ b/SobotKit.bundle/Localizable/id_lproj/SobotLocalizable.strings
@@ -11,7 +11,7 @@
 "暂时无法转接人工客服" = "Maaf, agen sedang sibuk saat ini";
 "暂时无法评价" = "Tidak dapat mengevaluasi sementara";
 "网络错误，请检查网络后重试" = "Kesalahan jaringan, mohon periksa jaringan dan coba lagi";
-"转人工" = "Chat Agen";
+"转人工" = "Agen";
 "时间" = "Waktu";
 "日期" = "Tanggal";
 "标题" = "Judul";
